2005-09-13  Werner Koch  <wk@g10code.com>

	* random.c (gcry_create_nonce): Detect a fork and re-seed.
	(read_pool): Fixed the fork detection; it used to work only for
	multi-threaded processes.

2005-06-16  Werner Koch  <wk@g10code.com>

	* cipher.c (gcry_cipher_register): Changed arg ALGORITHM_ID
	from unsigned int * to int*.
	* rmd160.c (_gcry_rmd160_mixblock): Applied cast.
	* tiger.c (round): Renamed to R to avoid conflict with builtin.
	* crc.c (crc32_write): Applied cast.
	* dsa.c (gen_k): Made RNDBUF unsigned.
	* elgamal.c (gen_k): Ditto.
	* blowfish.c (selftest): Added cast to constants.
	* random.c (rndpool, keypool): Made unsigned.
	(mix_pool): Changed char* to unsigned char*.
	* md.c (gcry_md_ctl): Use cast to fix signed/unsigned mismatch.
	* primegen.c (prime_generate_internal): Ditto.
	(is_prime): Made COUNT unsigned.

2005-06-15  Werner Koch  <wk@g10code.com>

	* cipher.c (gcry_cipher_encrypt, gcry_cipher_decrypt): Changed OUT
	and IN to void*.

	* md.c (gcry_md_ctl): Changed arg BUFFER to void*.
	* random.c (gcry_randomize): Ditto.
	(gcry_create_nonce): Ditto.

2005-04-16  Moritz Schulte  <moritz@g10code.com>

	* ac.c (_gcry_ac_init): New function.
	Replace strdup calls with calls to gcry_strdup.

2005-03-23  Werner Koch  <wk@g10code.com>

	* rndw32.c (_gcry_rndw32_gather_random_fast): While adding data
	use the size of the object and not the one of its address.  Bug
	reported by Sascha Kiefer.

2005-03-19  Moritz Schulte  <moritz@g10code.com>

	* cipher.c (do_cbc_encrypt): Be careful to not overwrite data,
	which is to be used later on.  This happend, in case CTS is
	enabled and OUTBUF is equal to INBUF.

2005-03-19  Moritz Schulte  <moritz@g10code.com>

	* ac.c (gcry_ac_data_copy_internal): Use gcry_strdup instead of
	strdup.
	(gcry_ac_data_set): Likewise.
	(gcry_ac_data_get_index): Likewise.

2005-02-25  Werner Koch  <wk@g10code.com>

	* pubkey.c (gcry_pk_get_keygrip): Allow for shadowed-private-key.

2005-01-05  Werner Koch  <wk@g10code.com>
