@@ -126,6 +126,7 @@ Tommi Komulainen           Tommi.Komulainen@iki.fi
 Thomas Mikkelsen	   tbm@image.dk
 Ulf Möller		   3umoelle@informatik.uni-hamburg.de
 Umberto Salsi		   salsi@icosaedro.it
+Uoti Urpala
 Urko Lusa		   ulusa@euskalnet.net
 Walter Koch		   koch@u32.de
 Werner Koch		   wk@gnupg.org
